Changelog
---------
0.xx
- buddy panel is no free floating window anymore
- adventure island which is a bit like DM - you get creatures but you get XP and items. It costs money and you must go alone
- trade center in progress

0.74
- player karma affects what skills they lose on death 
 --max 20% for non ring wearers with negative karma, and 10% as before if player karma was 0. if they had positive karma they lose less
 --Ring wearers lose max 2%, average 1% and less with positive karma
- new hybrid spider creature in nalwor drow tunnels
- new houses in ados, numbers 69 to 77 
- tutorial event linking to stendhal rules
- find out content of Ignore list by typing /ignore (with no parameters)
- deathmatch: if occupied then challenging player is told who is inside so they can say yes/no about entering
- feedback to player given on successful buddy and sentence actions
- feedback messages about failure when trying to drop or displace items too far from current location, displacing an item without being next to it, dropping onto a collision, adding to full slots
- inform player who dropped item into a nearby corpse, incase the drop was not deliberate
- Sarzina suggests some ways to get karma
- Daily monster, daily item and weekly item quests give karma.
- Daily Item quest gives less XP than monster now, (as it gives more karma)
- max level players get a large karma reward from daily and weekly quests (as they cannot earn xp from it)
- in fighting, made the 'level difference to not need karma' be dependent on level instead of being a fixed 20 levels 
- answer a riddle to leave hell, as another option instead of losing karma
- more creature descriptions 
- new raid scripts added, and list raids which gives the names. existing scripts renamed to be all same format
*Admin*
- gag is adminlevel 200
- support and supportanswer messages coloured orange to make more visible
- supportanswer keywords which abbreviate longer replies